--- a/style.css
+++ b/style.css
@@ -1,13 +1,11 @@
 body {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   margin: 0;
 }
 
 div {
   width: 300px;
   height: 100px;
+  margin: 0 auto;
   transition: height 0.2s ease;
 }
 
